tests/basic/check/not_iff/140.pan.out
tests/basic/check/not_iff/140.pan:5:1-5: error: cannot solve constraints of f140